--- a/singleplayer/style.css
+++ b/singleplayer/style.css
@@ -410,7 +410,7 @@ h1 {
     display: flex;
     justify-content: space-around;
     overflow: hidden;
-    background: white;
+    background: transparent;
     align-items: stretch !important;
 }
 
